--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Meu Perfil</title>
 </head>
 <body>
-    <header class="cabecalho"></header>
+    <header class="cabecalho">
+        <h1>vai ser uma imagem aqui</h1>
+        <ul class="listacabecalho">
+            <li class="itemlistadecabecalho">Wilson Joffre</li>
+            <li class="lista-cabecalho">Turmas</li>
+            <li class="listacabecalho">Programção</li>
+        </ul>
+    </header>
 </body>
 </html>
