--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <h1>vai ser uma imagem aqui</h1>
         <ul class="listacabecalho">
             <li class="itemlistadecabecalho">Wilson Joffre</li>
-            <li class="lista-cabecalho">Turmas</li>
-            <li class="listacabecalho">Programção</li>
+            <li class="lista-cabecalho">Anna Luiza</li>
+           
         </ul>
     </header>
 </body>
