--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header class="cabecalho">
-        <h1>vai ser uma imagem aqui</h1>
+        <img class="imagem-cabecalho" src="image 1.png" alt="logo wilon joffre">
         <ul class="listacabecalho">
         <li class="itemlistadecabecalho">Wilson Joffre</li>
         <li class="lista-cabecalho">Anna Luiza</li>
