--- a/index.html
+++ b/index.html
@@ -17,9 +17,7 @@
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
-            <h2>
-                
-            </h2>
+            <h2 class="escola-titulo">sobre a escola</h2>
     
         </div>
     </section>
