--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">sobre a escola</h2>
+            <p class="escola-texto-um">    Foi  fundada em 1959, leva o nome do médico  Wilson Joffre que trabalhava pelo desenvolvimento do município. O colégio se localiza no centro de cascavel-PR. </p>
     
         </div>
     </section>
