--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <p class="escola-texto-um">    Foi  fundada em 1959, leva o nome do médico  Wilson Joffre que trabalhava pelo desenvolvimento do município. O colégio se localiza no centro de cascavel-PR. </p>
     
         </div>
+        <img class="ecola-imagem" src="image 2.png" alt="livros e um capelo">
     </section>
 </body>
 </html>
