--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <img class="imagem-cabecalho" src="image 1.png" alt="logo wilon joffre">
         <ul class="listacabecalho">
         <li class="itemlistadecabecalho">Wilson Joffre</li>
-        <li class="lista-cabecalho">estudante</li>
+        <li class="lista-cabecalho">estudantes</li>
            
         </ul>
     </header>
