--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
         </div>
         <img class="escola-imagem" src="image 2.png" alt="livros e um capelo">
     </section>
+    <section class="estudante">
+        <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+    </section>
 </body>
 </html>
