--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+        <div class="estudante-div">
+            <img class="estudante-imagem" "anna.kailer (1).png" alt="">
+        </div>
     </section>
 </body>
 </html>
