--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
         <div class="estudante-div">
-            <img class="estudante-imagem" "anna.kailer (1).png" alt="">
+            <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
             <h3 class="estudante-nome">Anna Luiza</h3>
         </div>
     </section>
