--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <div class="estudante-div">
             <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
             <h3 class="estudante-nome">Anna Luiza</h3>
+            <img src="github (1).png" alt="estudante-icone">
+            <img src="google-drive.png" alt="estudante-icone">
+            <img src="google-plus.png" alt="estudante-icone">
         </div>
     </section>
 </body>
