--- a/index.html
+++ b/index.html
@@ -33,5 +33,12 @@
             <img src="google-plus.png" alt="estudante-icone">
         </div>
     </section>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="ana (1).png" alt="">
+        <h3 class="estudante-nome">Ana Luiza Paixão</h3>
+        <img src="github (1).png" alt="estudante-icone">
+        <img src="google-drive.png" alt="estudante-icone">
+        <img src="google-plus.png" alt="estudante-icone">
+    </div>
 </body>
 </html>
