--- a/index.html
+++ b/index.html
@@ -40,5 +40,54 @@
         <img src="google-drive.png" alt="estudante-icone">
         <img src="google-plus.png" alt="estudante-icone">
     </div>
+</section>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Gabriela (1).png" alt="">
+    <h3 class="estudante-nome">Gabriela Briere</h3>
+    <img src="github (1).png" alt="estudante-icone">
+    <img src="google-drive.png" alt="estudante-icone">
+    <img src="google-plus.png" alt="estudante-icone">
+</div>
+</section>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="nicollyvatar (450 x 450 px) (1).png" alt="">
+    <h3 class="estudante-nome">Nicolly</h3>
+    <img src="github (1).png" alt="estudante-icone">
+    <img src="google-drive.png" alt="estudante-icone">
+    <img src="google-plus.png" alt="estudante-icone">
+
+</div>
+</section>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Eloah.png" alt="">
+    <h3 class="estudante-nome">Eloah</h3>
+    <img src="github (1).png" alt="estudante-icone">
+    <img src="google-drive.png" alt="estudante-icone">
+    <img src="google-plus.png" alt="estudante-icone">
+</div>
+</section>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="SEGURA AQUI.png" alt="">
+    <h3 class="estudante-nome">Professora Fernanda</h3>
+    <img src="github (1).png" alt="estudante-icone">
+    <img src="google-drive.png" alt="estudante-icone">
+    <img src="google-plus.png" alt="estudante-icone">
+</div>
+</section>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Kamy.png" alt="">
+    <h3 class="estudante-nome">Kamylli</h3>
+    <img src="github (1).png" alt="estudante-icone">
+    <img src="google-drive.png" alt="estudante-icone">
+    <img src="google-plus.png" alt="estudante-icone">
+</div>
+</section>
+<div class="estudante-div">
+    <img class="estudante-imagem" src="Victoria (1).png" alt="">
+    <h3 class="estudante-nome">Victoria</h3>
+    <img src="github (1).png" alt="estudante-icone">
+    <img src="google-drive.png" alt="estudante-icone">
+    <img src="google-plus.png" alt="estudante-icone">
+</div>
 </body>
 </html>
