--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
             <h3 class="estudante-nome">Anna Luiza</h3>
             <img src="github (1).png" alt="" class="estudante-icone"">
-            <img src="google-drive.png" alt="" class= estudante-icone">
-            <img src="google-plus.png" alt="" class= estudante-icone">
+            <img src="google-drive.png" alt="" class= "estudante-icone">
+            <img src="google-plus.png" alt="" class= "estudante-icone">
         </div>
     </section>
     <div class="estudante-div">
