--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
 <div class="estudante-div">
     <img class="estudante-imagem" src="Gabriela (1).png" alt="">
     <h3 class="estudante-nome">Gabriela Briere</h3>
-    <img src="github (1).png" alt="" class= estudante-icone">
-    <img src="google-drive.png" alt="" class= estudante-icone">
-    <img src="google-plus.png" alt="" class= estudante-icone">
+    <img src="github (1).png" alt="" class= "estudante-icone">
+    <img src="google-drive.png" alt="" class= "estudante-icone">
+    <img src="google-plus.png" alt="" class= "estudante-icone">
 </div>
 </section>
 <div class="estudante-div">
     <img class="estudante-imagem" src="nicollyvatar (450 x 450 px) (1).png" alt="">
     <h3 class="estudante-nome">Nicolly</h3>
-    <img src="github (1).png" alt="" class= estudante-icone">
+    <img src="github (1).png" alt="" class= "estudante-icone">
     <img src="google-drive.png" alt="" class="estudante-icone">
     <img src="google-plus.png" alt="" class="estudante-icone">
 
