--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
+        <div class="estudante-todos">
         <div class="estudante-div">
             <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
             <h3 class="estudante-nome">Anna Luiza</h3>
@@ -88,6 +89,7 @@
     <img src="github (1).png" alt="" class=" estudante-icone">
     <img src="google-drive.png" alt="" class=" estudante-icone">
     <img src="google-plus.png" alt="" class=" estudante-icone">
+</div>
 </div>
 </body>
 </html>
