--- a/index.html
+++ b/index.html
@@ -1,95 +1,99 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu Perfil</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <img class="imagem-cabecalho" src="image 1.png" alt="logo wilon joffre">
         <ul class="listacabecalho">
-        <li class="itemlistadecabecalho">Wilson Joffre</li>
-        <li class="lista-cabecalho">estudantes</li>
-           
+            <li class="itemlistadecabecalho">Wilson Joffre</li>
+            <li class="lista-cabecalho">estudantes</li>
+
         </ul>
     </header>
     <section class="escola">
         <div class="escola-div-conteudo">
             <h2 class="escola-titulo">sobre a escola</h2>
-            <p class="escola-texto-um">    Foi  fundada em 1959, leva o nome do médico  Wilson Joffre que trabalhava pelo desenvolvimento do município. O colégio se localiza no centro de cascavel-PR. </p>
-    
+            <p class="escola-texto-um"> Foi fundada em 1959, leva o nome do médico Wilson Joffre que trabalhava pelo
+                desenvolvimento do município. O colégio se localiza no centro de cascavel-PR. </p>
+
         </div>
         <img class="escola-imagem" src="image 2.png" alt="livros e um capelo">
     </section>
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
         <div class="estudante-todos">
-        <div class="estudante-div">
-            <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
-            <h3 class="estudante-nome">Anna Luiza</h3>
-            <img src="github (1).png" alt="" class="estudante-icone"">
-            <img src="google-drive.png" alt="" class= "estudante-icone">
-            <img src="google-plus.png" alt="" class= "estudante-icone">
-        </div>
+            <div class="estudante-div">
+                <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
+                <h3 class="estudante-nome">Anna Luiza</h3>
+                <img src="github (1).png" alt="" class="estudante-icone"">
+            <img src=" google-drive.png" alt="" class="estudante-icone">
+                <img src="google-plus.png" alt="" class="estudante-icone">
+            </div>
     </section>
     <div class="estudante-div">
         <img class="estudante-imagem" src="ana (1).png" alt="">
         <h3 class="estudante-nome">Ana Luiza Paixão</h3>
-        <img src="github (1).png" alt=""  class=" estudante-icone">
+        <img src="github (1).png" alt="" class=" estudante-icone">
         <img src="google-drive.png" alt="" class="estudante-icone">
         <img src="google-plus.png" alt="" class="estudante-icone"">
     </div>
 </section>
-<div class="estudante-div">
-    <img class="estudante-imagem" src="Gabriela (1).png" alt="">
-    <h3 class="estudante-nome">Gabriela Briere</h3>
-    <img src="github (1).png" alt="" class= "estudante-icone">
-    <img src="google-drive.png" alt="" class= "estudante-icone">
-    <img src="google-plus.png" alt="" class= "estudante-icone">
-</div>
-</section>
-<div class="estudante-div">
-    <img class="estudante-imagem" src="nicollyvatar (450 x 450 px) (1).png" alt="">
-    <h3 class="estudante-nome">Nicolly</h3>
-    <img src="github (1).png" alt="" class= "estudante-icone">
-    <img src="google-drive.png" alt="" class="estudante-icone">
-    <img src="google-plus.png" alt="" class="estudante-icone">
+<div class=" estudante-div">
+        <img class="estudante-imagem" src="Gabriela (1).png" alt="">
+        <h3 class="estudante-nome">Gabriela Briere</h3>
+        <img src="github (1).png" alt="" class="estudante-icone">
+        <img src="google-drive.png" alt="" class="estudante-icone">
+        <img src="google-plus.png" alt="" class="estudante-icone">
+    </div>
+    </section>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="nicollyvatar (450 x 450 px) (1).png" alt="">
+        <h3 class="estudante-nome">Nicolly</h3>
+        <img src="github (1).png" alt="" class="estudante-icone">
+        <img src="google-drive.png" alt="" class="estudante-icone">
+        <img src="google-plus.png" alt="" class="estudante-icone">
 
-</div>
-</section>
-<div class="estudante-div">
-    <img class="estudante-imagem" src="Eloah.png" alt="">
-    <h3 class="estudante-nome">Eloah</h3>
-    <img src="github (1).png" alt="" class=" estudante-icone">
-    <img src="google-drive.png" alt="" class="estudante-icone">
-    <img src="google-plus.png" alt="" class=" estudante-icone">
-</div>
-</section>
-<div class="estudante-div">
-    <img class="estudante-imagem" src="SEGURA AQUI.png" alt="">
-    <h3 class="estudante-nome">Professora Fernanda</h3>
-    <img src="github (1).png" alt="" class="estudante-icone">
-    <img src="google-drive.png" alt="" class=" estudante-icone">
-    <img src="google-plus.png" alt="" class="estudante-icone">
-</div>
-</section>
-<div class="estudante-div">
-    <img class="estudante-imagem" src="Kamy.png" alt="">
-    <h3 class="estudante-nome">Kamylli</h3>
-    <img src="github (1).png" alt="" class=" estudante-icone">
-    <img src="google-drive.png" alt="" class=" estudante-icone">
-    <img src="google-plus.png" alt="" class=" estudante-icone">
-</div>
-</section>
-<div class="estudante-div">
-    <img class="estudante-imagem" src="Victoria (1).png" alt="">
-    <h3 class="estudante-nome">Victoria</h3>
-    <img src="github (1).png" alt="" class=" estudante-icone">
-    <img src="google-drive.png" alt="" class=" estudante-icone">
-    <img src="google-plus.png" alt="" class=" estudante-icone">
-</div>
-</div>
+    </div>
+    </section>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="Eloah.png" alt="">
+        <h3 class="estudante-nome">Eloah</h3>
+        <img src="github (1).png" alt="" class=" estudante-icone">
+        <img src="google-drive.png" alt="" class="estudante-icone">
+        <img src="google-plus.png" alt="" class=" estudante-icone">
+    </div>
+    </section>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="SEGURA AQUI.png" alt="">
+        <h3 class="estudante-nome">Professora Fernanda</h3>
+        <img src="github (1).png" alt="" class="estudante-icone">
+        <img src="google-drive.png" alt="" class=" estudante-icone">
+        <img src="google-plus.png" alt="" class="estudante-icone">
+    </div>
+    </section>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="Kamy.png" alt="">
+        <h3 class="estudante-nome">Kamylli</h3>
+        <img src="github (1).png" alt="" class=" estudante-icone">
+        <img src="google-drive.png" alt="" class=" estudante-icone">
+        <img src="google-plus.png" alt="" class=" estudante-icone">
+    </div>
+    </section>
+    <div class="estudante-div">
+        <img class="estudante-imagem" src="Victoria (1).png" alt="">
+        <h3 class="estudante-nome">Victoria</h3>
+        <img src="github (1).png" alt="" class=" estudante-icone">
+        <img src="google-drive.png" alt="" class=" estudante-icone">
+        <img src="google-plus.png" alt="" class=" estudante-icone">
+    </div>
+    </div>
 </body>
+
 </html>
