--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <section class="estudante">
         <h2 class="estudante-titulo">Quem são nossos estudantes</h2>
         <div class="estudante-todos">
+            <span></span>
             <div class="estudante-div">
                 <img class="estudante-imagem" src="anna.kailer (1).png" alt="">
                 <h3 class="estudante-nome">Anna Luiza</h3>
