--- a/index.html
+++ b/index.html
@@ -96,6 +96,9 @@
             </div>
         </div>
     </section>
+    <footer class="rodape">
+<img class="rodape-imagem" src="image 1.png" alt="">
+    </footer>
 </body>
 
 </html>
